syntax = "proto3";

option java_package = "com.voidDeveloper.wastatussaver.data.datastore.proto";
option java_multiple_files = true;

message AutoSaveUserPref {
  bool enable = 1;
  repeated MediaType media_type = 2;
  App app = 3;
  AutoSaveInterval autoSaveInterval = 4;
}

enum App {
  UNKOWN_APP = 0;
  WHATSAPP = 1;
  WHATSAPP_BUSINESS = 2;
}

enum AutoSaveInterval {
  UNKOWN = 0;
  ONE = 1;
  SIX = 2;
  TWELVE = 3;
  TWENTY_FOUR = 4;
}

enum MediaType {
  UNSPECIFIED = 0;
  IMAGE = 1;
  VIDEO = 2;
  AUDIO = 3;
}
